Revamped Front Page and Boiler Template.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 ---
-title: Home
+title: Welcome to my personal space!
 ---
 
-<h2>Welcome</h2>
+<hr>
+<p>
+    I'm Zhan Kang, name in simplified chinese is 展慷. I gradutated in April 2022 with a Diploma in Information Technology from
+    <a href="https://www.sp.edu.sg/" class="underline">Singapore Polytechnic</a>. If you are reading this paragraph, welcome to my personal space!
+    Here you will be able to find more information about me which i don't post it in elsewhere. I have included my social media profiles at the footer
+    (or the bottom of the page for non-programmers).
+</p>
 
-<p>Welcome to my blog!</p>
+<h4>Current Activities</h4>
+<p>
+    I am currently working as a Data Analyst at SingTel whilst waiting to serve my
+    national service come September. For now, I am still working on this website.
+</p>
 
-<p>I've reproduced a list of recent posts here for your reading pleasure:</p>
+<h4>Website still a work in progress!</h4>
+<p>
+    Currently this website is still a "work-in-progress" as I attempt to introduce more efficient methods into the website. Feel free to contact me via my social media
+    channels for advice on how I can futher improve this website! 
+</p>
+
+
+
+
+
+
+
+<!-- <p>I've reproduced a list of recent posts here for your reading pleasure:</p>
 
 <h2>Posts</h2>
 $partial("templates/post-list.html")$
 
-<p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
+<p>…or you can find more in the <a href="/archive.html">archives</a>.</p> -->
