Major updates including homepage and resume.

--- a/index.html
+++ b/index.html
@@ -2,30 +2,17 @@
 title: Welcome to my personal space!
 ---
 
+<h2>Hello I am</h2>
+<h1>Zhan Kang 展慷</h1>
 <hr>
+
+<p>Driven. Passionate. Goofy?</p>
 <p>
-    I'm Zhan Kang, name in simplified chinese is 展慷. I gradutated in April 2022 with a Diploma in Information Technology from
-    <a href="https://www.sp.edu.sg/" class="underline">Singapore Polytechnic</a>. If you are reading this paragraph, welcome to my personal space!
-    Here you will be able to find more information about me which i don't post it in elsewhere. I have included my social media profiles at the footer
-    (or the bottom of the page for non-programmers).
+    That's probably what represents me best right now. I'm currently a full-time national serviceman in the Singapore Armed Forces, where i serve my 
+    2 years of obligatory service to the nation.
 </p>
-
-<h4>Current Activities</h4>
-<p>
-    I am currently working as a Data Analyst at SingTel whilst waiting to serve my
-    national service come September. For now, I am still working on this website.
-</p>
-
-<h4>Website still a work in progress!</h4>
-<p>
-    Currently this website is still a "work-in-progress" as I attempt to introduce more efficient methods into the website. Feel free to contact me via my social media
-    channels for advice on how I can futher improve this website! 
-</p>
-
-
-
-
-
+<p>I like spending time volunteering for my community, as well as exploring various hawker foods around Singapore (I'm an avid hawker centre foodie hunter!)</p>
+<p>Do hit me up via my socials (or via tele or whatsapp if you have my contact) if you feel that some aspects of this website can be improved!</p>
 
 
 <!-- <p>I've reproduced a list of recent posts here for your reading pleasure:</p>
